--- a/biblist.bib
+++ b/biblist.bib
@@ -1,4 +1,4 @@
-
+% TODO: Years should be typeset using onum
 
 
 @book{wendland_2004,
@@ -7,7 +7,7 @@ series={Cambridge Monographs on Applied and Computational Mathematics},
 title={Scattered Data Approximation},
 publisher={Cambridge University Press},
 author={Wendland, Holger}, 
-year={\caps\currvar 2004\nocaps\currvar},
+year={2004},
 collection={Cambridge Monographs on Applied and Computational Mathematics}
 }
 
@@ -15,12 +15,12 @@ collection={Cambridge Monographs on Applied and Computational Mathematics}
 @book{shaback_1997,
 title = {Reconstruction of multivariate functions from scattered data},
 author = {Schaback, Robert},
-year = {\caps\currvar 1997\nocaps\currvar}
+year = {1997}
 }
 
 @article{shaback_2006,
 author = {Schaback, Robert and  Werner, J.},
-year = {\caps\currvar 2006\nocaps\currvar},
+year = {2006},
 title = {Linearly constrained reconstruction of functions by kernels with applications to machine learning},
 journal = {Advances in Computational Mathematics}
 }
@@ -29,7 +29,7 @@ journal = {Advances in Computational Mathematics}
 @book{fasshauer_2007,
 author = {Fasshauer, Gregory F},
 title = {Meshfree Approximation Methods with MATLAB},
-year = {\caps\currvar 2007\nocaps\currvar},
+year = {2007},
 publisher = {World Scientific Publishing Co., Inc.},
 address = {USA}
 }
@@ -40,7 +40,7 @@ address = {USA}
  author = {Stein, Elias M. and Shakarchi, Rami},
  publisher = {Princeton University Press},
  title = {Real Analysis: Measure Theory, Integration, and Hilbert Spaces},
- year = {\caps\currvar 2005\nocaps\currvar}
+ year = {2005}
 }
 
 
@@ -53,11 +53,56 @@ and Mache, Detlef H.
 and Felten, Michael",
 title="Native Hilbert Spaces for Radial Basis Functions I",
 booktitle="New Developments in Approximation Theory",
-year="\caps\currvar 1999\nocaps\currvar",
+year="1999",
 publisher="BirkhÃ¤user Basel",
 address="Basel",
 pages="255--282"
 }
 
 
+@article{demarchi-shaback_2010,
+author = {De Marchi, Stefano and Schaback, Robert},
+year = {2010},
+month = {02},
+pages = {155-161},
+title = {Stability of kernel-based interpolation},
+volume = {32},
+journal = {Adv. Comput. Math.},
+doi = {10.1007/s10444-008-9093-4}
+}
 
+
+@article{pazouki-schaback_2011,
+author = {Pazouki, Maryam and Schaback, Robert},
+year = {2011},
+month = {09},
+pages = {575-588},
+title = {Bases for kernel-based spaces},
+volume = {236},
+journal = {J. Computational Applied Mathematics},
+doi = {10.1016/j.cam.2011.05.021}
+}
+
+
+@article{fornberg-wright_2004,
+author = {Fornberg, B. and GB, Wright},
+year = {2004},
+month = {09},
+pages = {853-867},
+title = {Stable computation of multiquadric interpolants for all values of the shape parameter},
+volume = {48},
+journal = {Computers \& Mathematics with Applications},
+doi = {10.1016/j.camwa.2003.08.010}
+}
+
+
+@article{fornberg-larsson-flyer_2011,
+author = {Fornberg, Bengt and Larsson, Elisabeth and Flyer, Natasha},
+year = {2011},
+month = {01},
+pages = {869-892},
+title = {Stable Computations with Gaussian Radial Basis Functions},
+volume = {33},
+journal = {SIAM J. Scientific Computing},
+doi = {10.1137/09076756X}
+}
