--- a/optimality.tex
+++ b/optimality.tex
@@ -62,7 +62,7 @@ and hence that
 $$
 \norm{s_{X, f}}_Φ^2\leq\norm{\.g}_Φ^2.
 $$
-Notice that in the last expression equality holds if and only if $\norm{\.g-s_{X,f}}_Φ^2 = 0$, i.e.,  if and only if~$g = s_{X,f}$.  This means that the minimum of the norm is realised {\em only} by~$s_{X, f}$. \hfill\QED
+Notice that in the last expression equality holds if and only if $\norm{\.g-s_{X,f}}_Φ^2 = 0$, i.e.,  if and only if~$g = s_{X,f}$.  This means that the minimum of the norm is realised {\em only} by~$s_{X, f}$.~\QED
 %\postskip
 
 
