--- a/the-interpolation-problem.tex
+++ b/the-interpolation-problem.tex
@@ -105,7 +105,7 @@ $$
 D(t)\coloneq\det\Bm A_t\mathbox.
 $$
 This function is continuous on the whole domain~$[0,1]$, and  it  has the property that $D(1)=-D(0)$.
-  In fact, swapping two rows of a matrix (the first two rows in this case) has the effect of changing the sign of its determinant.  Thus, there should be a number~$\xi\in(0,1)$ such that~$D(\xi)=0$. But this is impossible, since $\Cal S$ is assumed to be nondegenerate for each set of locations~$X$, and so in particular  for~$X_\xi$. \hfill\QED
+  In fact, swapping two rows of a matrix (the first two rows in this case) has the effect of changing the sign of its determinant.  Thus, there should be a number~$\xi\in(0,1)$ such that~$D(\xi)=0$. But this is impossible, since $\Cal S$ is assumed to be nondegenerate for each set of locations~$X$, and so in particular  for~$X_\xi$.~\QED
 %\postskip
 
 % Multivariate polynomials
