--- a/thesis-mac.tex
+++ b/thesis-mac.tex
@@ -42,6 +42,8 @@
 \def\R{\BbbR}
 \def\N{\BbbN}
 
+% Compatibility with LaTeX (Inkscape pictures)
+\def\textbf#1{\bf #1}
 
 
 % Change size of footnote
