--- a/thesis.tex
+++ b/thesis.tex
@@ -6,7 +6,6 @@
 \hyperlinks \Black \Black
 \outlines 1
 
-
 \enlang
 %\fontfam[garamondgeorgd] \setff{+calt} % +dlig
 \fontfam[BaskervilleMT]\load[patches]\let\semibold\bf %\let\bf\kf \let\bi\ki
@@ -14,16 +13,19 @@
 %\OpTeX
 % We must ensure that . , ; etc are from the same font in text and math mode.
 
-\def\QED{\Umathchar"0"01"00203B}
+\def\QED{\hbox{$\Bm{\Umathchar"0"01"00203B}$}}
 
-\margins/1 a4 (100,95,130,145)pt
+\margins/1 a4 (103,97,130,145)pt
 
 %\typosize[12.21/14.5]
 %\typosize[12/14.1818]
 \typosize[11.9/14.1]
-\parindent 1.5em
+\parindent 1em
 \parskip 1.5ex
 \rulewidth 0.12ex
+
+\picdir={pic/}
+
 
 \bgroup
 \let\_mtext\ignoreit
