--- a/biblist.bib
+++ b/biblist.bib
@@ -64,7 +64,7 @@ pages="255--282"
 author = {De Marchi, Stefano and Schaback, Robert},
 year = {2010},
 month = {02},
-pages = {155-161},
+pages = {155--161},
 title = {Stability of kernel-based interpolation},
 volume = {32},
 journal = {Adv. Comput. Math.},
@@ -76,7 +76,7 @@ doi = {10.1007/s10444-008-9093-4}
 author = {Pazouki, Maryam and Schaback, Robert},
 year = {2011},
 month = {09},
-pages = {575-588},
+pages = {575--588},
 title = {Bases for kernel-based spaces},
 volume = {236},
 journal = {J. Computational Applied Mathematics},
@@ -88,7 +88,7 @@ doi = {10.1016/j.cam.2011.05.021}
 author = {Fornberg, B. and GB, Wright},
 year = {2004},
 month = {09},
-pages = {853-867},
+pages = {853--867},
 title = {Stable computation of multiquadric interpolants for all values of the shape parameter},
 volume = {48},
 journal = {Computers \& Mathematics with Applications},
@@ -100,9 +100,32 @@ doi = {10.1016/j.camwa.2003.08.010}
 author = {Fornberg, Bengt and Larsson, Elisabeth and Flyer, Natasha},
 year = {2011},
 month = {01},
-pages = {869-892},
+pages = {869--892},
 title = {Stable Computations with Gaussian Radial Basis Functions},
 volume = {33},
 journal = {SIAM J. Scientific Computing},
 doi = {10.1137/09076756X}
+}
+
+
+@article{rippa_1999,
+author = {Rippa, Shmuel},
+year = {1999},
+month = {11},
+pages = {193--210},
+title = {An algorithm for selecting a good parameter~$c$ in radial basis function interpolation},
+volume = {11},
+journal = {Advances in Computational Mathematics},
+doi = {10.1023/A:1018975909870}
+}
+
+
+@article{fasshauer_2011,
+author = {Fasshauer, Gregory},
+year = {2011},
+month = {01},
+pages = {},
+title = {Positive Definite Kernels: Past, Present and Future},
+volume = {4},
+journal = {Dolomite Res. Notes Approx.}
 }
