--- a/optimality.tex
+++ b/optimality.tex
@@ -29,7 +29,7 @@ f = s_{X,f} + (f-s_{X, f}).
 $$
 The orthogonality of the two components implies the {\em Pythagorean identity}, which says that
 $$
-\norm{\.f}_Φ^2=\norm{s_{X,f}}_Φ^2+\norm{f-s_{X, f}}^2. \eqmark[pythag]
+\norm{\.f}_Φ^2=\norm{s_{X,f}}_Φ^2+\norm{f-s_{X, f}}_Φ^2. \eqmark[pythag]
 $$ 
 
 
